<resources>
    <string name="app_name">Solar Panel X</string>

    <string name="play_console_license" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAhUBIj3nwe9VN8oQAbfUwJwlbvEAbub/cFQvi2p6Atjyu/Wzgnq6b9ZI6igzw6hRTUjuXUaa8Wn6H8zNSFKcBHIJudAjDXNCG+vvr0FmPJ9LSgDDn3bFALQluw2+TVUIiseEnVw/aUSY4Ha473K81CNa1fUu13+sneox22Zc0RnG6okXFe0TdAbnHj03S3PU3qztGwCjRK5pWT6AkOx5j96Zfi2h5ywAdHvl+q1rkALbZVvvVT4YKQAdUNFIjIVGYYwT9CThR5C3HkAaBu/Jv5y/UyN1Z2V6MZboZpqsqdz6f8P2B0Z6JBV6qLNOAueLweSSTVaiLHWsMWG5/+oBwuQIDAQAB</string>
    <string name="premium" translatable="false">annually_subscription1</string>


    <string name="mainscreen_chart_title_forecast20hr">"Forecast for ~20 hours: "</string>
    <string name="mainscreen_chart_title_forecasttomorrow">"for tomorrow "</string>
    <string name="screenaddstation_map_title">Please set location  of your Solar Panels</string>
    <string name="next">next></string>
    <string name="screenaddstation_confirm_nominalpower_description">Maximum (Nominal) power of your PV station [in Watts]</string>
    <string name="screenaddstation_confirm_priceper1kwh_description">Price per 1 kWh</string>
    <string name="screenaddstation_confirm_currency_description">Currency in your country</string>
    <string name="screenaddstation_confirm_efficiency_description">Average efficiency of your solar panels [%]</string>
    <string name="screenaddstation_confirm_install_date_description">Installation date of PV system     [years]</string>
    <string name="screenaddstation_confirm_button">Confirm Changes</string>
    <string name="settingsscreen_menu_checkupdates">Rate us 5-Stars</string>
    <string name="settingsscreen_menu_aboutus">About App</string>
    <string name="settingsscreen_menu_aboutus_message">"Features:           > forecasting of solar panels generation on Hour, Week, Month           > detailed charts of forecast           > the ability to calibrate the forecast                     Future features:           > Coming soon we will add Explorer mode with angle and light sensors. It may help you to choose the more sunny place for solar panels "</string>
    <string name="calibrationscreen_description">Calibrate forecasting power output of your current Solar Panel, if needed</string>
    <string name="nominal_power_cantbe_null">Nominal Power can\'t be a 0</string>
    <string name="changes_saved">changes saved</string>
    <string name="light_sensor__error_title">Your Phone does not have a Light Sensor</string>
    <string name="light_sensor__error_message">Check the app on another phone</string>
    <string name="light_sensor_sign_raw_value">raw sensor value</string>
    <string name="light_sensor_sign_exchange_rate">1% of all Power Output =</string>
    <string name="light_sensor_sign_converted">"converted "</string>
    <string name="light_sensor_sign_one_percent_of_powerout">"1% PowerOutput = "</string>
    <string name="light_sensor_sign_now_solpan">Now the solar panel</string>
    <string name="light_sensor_sign_work_at_percent">" is working at"</string>
    <string name="light_sensor_sign_raw_value_footer">" raw sensor value"</string>
    <string name="light_sensor_sign_nominal_power">Nominal  Power:</string>
    <string name="light_sensor_sign_calibrate_mode">Calibrate Mode:</string>
    <string name="confirm_fragment_cost_of_pv_station">Cost of PV Station</string>
    <string name="fragment_confirm_advanced_optional">Advanced (optional)</string>
    <string name="addstation_activity_map">Map</string>
    <string name="addstation_activity_characteristics">Characteristics</string>
    <string name="settingsscreen_menu_solarpanels_change_language">Language</string>
    <string name="dialog_choose_language">Choose language</string>
    <string name="mainscreen_fr_forecastnow">⚡Forecast now:</string>
    <string name="mainscreen_fr_city">City:</string>
    <string name="mainscreen_fr_temp">Temp: "</string>
    <string name="mainscreen_fr_loading">Loading...</string>
    <string name="mainscreen_fr_errornointernet">error, no internet</string>
    <string name="mainscreen_chart_title_forecast_aftertomorrow">after tomorrow</string>
    <string name="My_PV_Station">My PV Station</string>
    <string name="Optimal_Tilt">Optimal Tilt</string>
    <string name="Calibrating">Calibrating</string>
    <string name="maintools_screen_title_Bad_Weather_Alerts">Bad Weather Alerts beta</string>
    <string name="mainscreen_tools">🛠️Tools</string>
    <string name="maintools_screen_title_ight_sensor">Light Sensor beta</string>
    <string name="main_screen_tip_label_forecast">1️⃣Forecast power now  2️⃣ % of max generation</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunshine_time">Sunshine time</string>
    <string name="sunset">Sunset</string>
    <string name="main_screen_last_upd">last updated: </string>
    <string name="optimal_orientation_for_city">Optimal orientation for city:</string>
    <string name="optimal_direction">Optimal direction</string>
    <string name="actual_direction">Actual direction</string>
    <string name="calibrate_tilt">Calibrate Tilt</string>
    <string name="bottom_of_your_solar_panel">⬇Bottom of your Solar Panel⬇️</string>
    <string name="at_find_optimal_azimuth">at find optimal azimuth</string>
    <string name="orientation_of_phone">Orientation of Phone:</string>
    <string name="at_find_optimal_tilt">at find optimal tilt</string>
    <string name="calibrating_tilt">Calibrating tilt:</string>
    <string name="calibrating_direction_azimuth">Calibrating direction/azimuth:</string>
    <string name="optimal_tilt">Optimal tilt</string>
    <string name="actual_tilt">Actual tilt</string>
    <string name="close">Close</string>
    <string name="azimuth">azimuth=</string>
    <string name="new_feature_coming_soon">Coming Soon! [Late September 21`]</string>
    <string name="new_feature_coming_soon2">Coming Soon! [Late October 21`]</string>
    <string name="maintools_screen_title_nn">Neural Network</string>

    <string name="compass_doesn_t_work_on_your_phone">Compass doesn\'t work on your phone😕</string>
    <string name="twitter_of_author">🐦twitter of author</string>
    <string name="lightsensor_warning1">specify a number less than</string>
    <string name="notification_screen_daily">Daily</string>
    <string name="notification_screen_every_3day">every 3 days</string>
    <string name="notification_screen_weekly">Weekly</string>
    <string name="notification_screen_standart_notif_decription">Change frequency of notifications, they will show sum of power generation for now. Also max and min per current week</string>
    <string name="notification_screen_standart_notif_title">Standard Notifications</string>
    <string name="notification_screen_title">This is Beta version may be some bugs</string>
    <string name="tool_manager_screen_do_you_like_app">Do you like app?</string>
    <string name="purchase_why">
\n ✔️Forecast of power generation to 5 days
\n ✔️No ads. Forever
    </string>
    <string name="why_premium_title">Why Premium?</string>
    <string name="g_e_t_p_r_e_m_i_u_m_button">G E T \u0020 P R E M I U M</string>
    <string name="price_of_premium_1_99_per_year">1.99$ per year</string>
    <string name="hint_recurring_billing_cancel_anytime_on_google_play_store">Recurring billing. Cancel anytime on Google Play Store</string>
    <string name="current_plan_premium">Your current plan: Premium</string>
    <string name="current_plan_free">Your current plan: Free</string>
    <string name="mainscreen_chart_nominal_power_is_here">Nominal Power of your PV system</string>
    <string name="watts_sign">watts</string>
    <string name="optimal_tilt_is_the_orientation_wrong">Is the orientation wrong?</string>
    <string name="tilt_sensor_rot_vector">"Rotation Vector      "</string>
    <string name="tilt_sensor_accelerometer">"Accelerometer        "</string>
    <string name="choose_type_of_sensor_solar_pan">Choose Type of Sensor</string>
    <string name="new_feature_coming_soon_plump">"Coming Soon. Now in development "</string>
    <string name="about_special_thanks">🤩Special Thanks to: \n Rémi \n JIPPY63</string>
    <string name="mainscreen_map_info">Red point on map - is location of your solar station</string>
    <string name="mainscreen_now_time">Current Time: </string>
    <string name="title_activity_finance">FinanceActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>