<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature_modules.optimaltilt_machine.OptimalOrientationHelperActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/optimal_tilt"
        android:textColor="#959595"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/actual_tilt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/optimal_tilt_view"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="45"
        android:textColor="#959595"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/actual_tilt_view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </TextView>

    <TextView
        android:id="@+id/actual_tilt_view"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="45"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="110dp"
        android:layout_marginTop="124dp"
        android:src="@drawable/sm_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pitch_tilt_solar_panel">

    </ImageView>

    <ImageView
        android:id="@+id/pitch_tilt_solar_panel"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/sp4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optimal_tilt_view" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="goOrNotTilt, closefragment_tilt"
        app:flow_horizontalGap="20dp"
        app:flow_verticalGap="20dp"
        app:flow_verticalStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/bottom_solar_pan_warning2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.5">

    </androidx.constraintlayout.helper.widget.Flow>

    <androidx.cardview.widget.CardView
        android:id="@+id/goOrNotTilt"
        android:layout_width="120dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/suggest_tilt_viewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#007300"
            android:gravity="center"
            android:text="🤩👍"
            android:textColor="@color/white"
            android:textSize="30sp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/closefragment_tilt"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:elevation="22dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/btn_close_calc_tilt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F9FAF9"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/black">

        </TextView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/bottom_solar_pan_warning2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F80000"
        android:gravity="center"
        android:text="@string/bottom_of_your_solar_panel"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>